--- a/src/styles/drugWatcher/DrugList.css
+++ b/src/styles/drugWatcher/DrugList.css
@@ -1,3 +1,7 @@
-.druglist-component {
-  border: 1px dashed #f00;
+
+[class*="col-"] {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: rgba(86,61,124,.15);
+  border: 1px solid rgba(86,61,124,.2);
 }
